--- a/mosquitto/etc/systemd/system/mosquitto.service
+++ b/mosquitto/etc/systemd/system/mosquitto.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Home Assistant (docker compose)
+Description=Mosquitto (docker compose)
 Requires=docker.service
 After=docker.service
 
@@ -9,7 +9,7 @@ RemainAfterExit=yes
 WorkingDirectory=/data/mosquitto
 ExecStart=/usr/bin/docker compose -f /data/mosquitto/compose.yml up -d
 ExecStop=/usr/bin/docker compose -f /data/mosquitto/compose.yml down
-TimeoutStartSec=0
+TimeoutStartSec=10
 
 [Install]
 WantedBy=multi-user.target
