--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "ansible.validation.lint.enabled": true,
     "files.associations": {
         "traefik.yml": "ansible"
-      }
+      },
+      "ansible.python.interpreterPath": "/bin/python3"
 }
