--- a/home-assistant.yml
+++ b/home-assistant.yml
@@ -42,28 +42,6 @@
         regexp: '___USB_ZIGBEE_ID___'
         replace: '{{ usb_zigbee_id }}'
 
-    - name: Install Home Mosquitto configuration
-      ansible.builtin.copy:
-        src: home-assistant/mosquitto.conf
-        dest: /data/mosquitto/mosquitto.conf
-        owner: "{{ system_user }}"
-        group: "{{ system_group }}"
-        mode: "0600"
-
-    - name: Install Mosquitto Password
-      ansible.builtin.copy:
-        src: .secrets/mosquitto_password_file
-        dest: /data/mosquitto/mosquitto_password_file
-        owner: "{{ system_user }}"
-        group: "{{ system_group }}"
-        mode: '0600'
-
-    - name: Remove local mosquitto password file
-      ansible.builtin.file:
-        path: .secrets/mosquitto_password_file
-        state: absent
-      delegate_to: localhost
-
     - name: Install Home Assistant service
       ansible.builtin.copy:
         src: home-assistant/etc/systemd/system/home-assistant.service
@@ -75,4 +53,4 @@
     - name: Start service home-assistant, if not started
       ansible.builtin.service:
         name: home-assistant
-        state: started
+        state: restarted
