--- a/pihole.yml
+++ b/pihole.yml
@@ -36,14 +36,15 @@
         group: root
 
     - name: Allow local usage of DNS
-      ansible.builtin.copy:
-        content: static domain_name_servers=127.0.0.1'
-        dest: dhcpcd.conf
-        mode: "0600"
-        owner: "{{ system_user }}"
-        group: "{{ system_group }}"
+      ansible.builtin.lineinfile:
+        line: static domain_name_servers=127.0.0.1
+        state: present
+        create: true
+        path: /etc/dhcpcd.conf
+        mode: "0644"
+        owner: root
 
     - name: Start service pihole, if not started
       ansible.builtin.service:
         name: pihole
-        state: started
+        state: restarted
