--- a/pihole/compose.yml
+++ b/pihole/compose.yml
@@ -15,6 +15,23 @@ services:
       - '/data/pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
     restart: unless-stopped
     labels:
+      - "traefik.docker.network=webproxy"
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`pihole`)"
-      - "traefik.http.routers.whoami.entrypoints=web"    
+      - "traefik.http.routers.pihole.rule=Host(`pihole.home`)"
+      - "traefik.http.routers.pihole.entrypoints=web"
+      - "traefik.backend=pihole" 
+      - "traefik.frontend.rule=Host:pihole.home"
+      - "traefik.port=1080"
+      - "traefik.default.protocol=http"
+      - "traefik.http.services.pihole.loadbalancer.server.port=80"
+    networks:
+      - local
+      - public
+
+networks:
+  local:
+     name: pihole
+
+  public:
+    external: true
+    name: "webproxy"
