--- a/traefik/compose.yml
+++ b/traefik/compose.yml
@@ -9,8 +9,19 @@ services:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--providers.file.watch=true"
     ports:
       - "80:80"
-      - "8080:8080"
+      - "443:443"
+      # Port 8080 must be allocated to the unfi-network-application in order to migrate/adopt devices
+      - "8081:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    networks:
+      - public
+      
+networks:
+  public:
+    name: "webproxy"
+    
