--- a/unifi-network-application/compose.yml
+++ b/unifi-network-application/compose.yml
@@ -21,13 +21,17 @@ services:
       - 8443:8443
       - 3478:3478/udp
       - 10001:10001/udp
-      #- 8080:8080
+      - 8080:8080
       #- 1900:1900/udp #optional
       #- 8843:8843 #optional
       #- 8880:8880 #optional
       #- 6789:6789 #optional
       #- 5514:5514/udp #optional
     restart: unless-stopped
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.unifi-network-application.rule=Host(`unifi.home`)"
+      - "traefik.http.routers.unifi-network-application.entrypoints=web"          
 
   mongo-db:
     image: docker.io/mongo:latest
@@ -38,7 +42,3 @@ services:
     restart: unless-stopped
     ports:
       - 27017:27017
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`unifi`)"
-      - "traefik.http.routers.whoami.entrypoints=web"          
