--- a/traefik/compose.yml
+++ b/traefik/compose.yml
@@ -20,8 +20,20 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
     networks:
       - public
-      
+      - local
+    labels:
+      - "traefik.docker.network=webproxy"
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.home`)"
+      - "traefik.http.routers.traefik.entrypoints=web"
+      - "traefik.backend=traefik" 
+      - "traefik.frontend.rule=Host:traefik.home"
+      - "traefik.port=8080"
+      - "traefik.default.protocol=http"
+      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
+
 networks:
   public:
     name: "webproxy"
-    
+  local:
+    name: traefik 
