--- a/unifi-network-application/compose.yml
+++ b/unifi-network-application/compose.yml
@@ -18,9 +18,10 @@ services:
     volumes:
       - /data/unifi-network-application:/config
     ports:
-      - 8443:8443
+      #- 8443:8443
       - 3478:3478/udp
       - 10001:10001/udp
+      # Port 8080 is used for adopting, for now this does not yet work via Traefik
       - 8080:8080
       #- 1900:1900/udp #optional
       #- 8843:8843 #optional
@@ -39,13 +40,9 @@ services:
       - traefik.default.protocol=http
       - traefik.http.services.unifi.loadbalancer.server.port=8443
       - traefik.http.services.unifi.loadbalancer.server.scheme=https
-      #- traefik.http.middlewares.sslheader.headers.customrequestheaders.X-Forwarded-Proto=https
     networks:
       - local
       - public
-
-
-
 
   mongo-db:
     image: docker.io/mongo:latest
@@ -54,8 +51,6 @@ services:
       - /data/mongo-db:/data/db
       - /data/mongo-db/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
     restart: unless-stopped
-    # ports:
-    #   - 27017:27017
     networks:
       - local
 
