--- a/pihole/compose.yml
+++ b/pihole/compose.yml
@@ -6,7 +6,6 @@ services:
     ports:
       - "53:53/tcp"
       - "53:53/udp"
-      - "1080:80/tcp"
     environment:
       TZ: 'Europe/Amsterdam'
       WEBPASSWORD: '___WEBPASSWORD___'
@@ -15,6 +14,23 @@ services:
       - '/data/pihole/etc-dnsmasq.d:/etc/dnsmasq.d'
     restart: unless-stopped
     labels:
+      - "traefik.docker.network=webproxy"
       - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`pihole`)"
-      - "traefik.http.routers.whoami.entrypoints=web"    
+      - "traefik.http.routers.pihole.rule=Host(`pihole.local`)"
+      - "traefik.http.routers.pihole.entrypoints=web"
+      - "traefik.backend=pihole" 
+      - "traefik.frontend.rule=Host:pihole.local"
+      - "traefik.port=80"
+      - "traefik.default.protocol=http"
+      - "traefik.http.services.pihole.loadbalancer.server.port=80"
+    networks:
+      - local
+      - public
+
+networks:
+  local:
+     name: pihole
+
+  public:
+    external: true
+    name: "webproxy"
