--- a/traefik.yml
+++ b/traefik.yml
@@ -28,7 +28,12 @@
         owner: root
         group: root
 
-    # - name: Start service traefik, if not started
-    #   ansible.builtin.service:
-    #     name: traefik
-    #     state: started
+    - name: Enable traefik service
+      ansible.builtin.service:
+        name: traefik
+        enabled: true
+
+    - name: Start service traefik, if not started
+      ansible.builtin.service:
+        name: traefik
+        state: restarted
