--- a/traefik/compose.yml
+++ b/traefik/compose.yml
@@ -4,13 +4,35 @@ services:
     image: "traefik:v3.0"
     container_name: "traefik"
     command:
-      #- "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entryPoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--providers.file.watch=true"
+      # This is needed for Unifi Network Application
+      - "--serversTransport.insecureSkipVerify=true"
     ports:
       - "80:80"
-      - "8080:8080"
+      - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    networks:
+      - public
+      - local
+    labels:
+      - "traefik.docker.network=webproxy"
+      - "traefik.enable=true"
+      - "traefik.http.routers.traefik.rule=Host(`traefik.local`)"
+      - "traefik.frontend.rule=Host:traefik.local"
+      - "traefik.http.routers.traefik.entrypoints=web"
+      - "traefik.backend=traefik" 
+      - "traefik.port=8080"
+      - "traefik.default.protocol=http"
+      - "traefik.http.services.traefik.loadbalancer.server.port=8080"
+
+networks:
+  public:
+    name: "webproxy"
+  local:
+    name: traefik 
