--- a/unifi-network-application/playbook.yml
+++ b/unifi-network-application/playbook.yml
@@ -15,19 +15,19 @@
 
     - name: Unifi Network Application install compose file
       ansible.builtin.copy:
-        src: unifi-network-application/compose.yml
+        src: compose.yml
         dest: /data/unifi-network-application/compose.yml
         mode: "0600"
 
     - name: Init Mong DB user
       ansible.builtin.copy:
-        src: unifi-network-application/init-mongo.js
+        src: init-mongo.js
         dest: /data/mongo-db/init-mongo.js
         mode: "0600"
 
     - name: Unifi Network Application install service
       ansible.builtin.copy:
-        src: unifi-network-application/etc/systemd/system/unifi-network-application.service
+        src: etc/systemd/system/unifi-network-application.service
         dest: /etc/systemd/system/unifi-network-application.service
         mode: "0644"
         owner: root
