--- a/mosquitto/playbook.yml
+++ b/mosquitto/playbook.yml
@@ -27,7 +27,7 @@
 
     - name: Pihole Mosquitto compose file
       ansible.builtin.copy:
-        src: mosquitto/compose.yml
+        src: compose.yml
         dest: /data/mosquitto/compose.yml
         owner: "{{ system_user }}"
         group: "{{ system_group }}"
@@ -36,13 +36,13 @@
     - name: Generate the Mosquitto users file
       delegate_to: localhost
       ansible.builtin.template:
-        src: mosquitto/users.j2
-        dest: .secrets/mosquitto_password_file
+        src: users.j2
+        dest: /tmp/mosquitto_password_file
         mode: "0644"
 
     - name: Install Mosquitto Password
       ansible.builtin.copy:
-        src: .secrets/mosquitto_password_file
+        src: /tmp/mosquitto_password_file
         dest: /data/mosquitto/mosquitto_password_file
         owner: "{{ system_user }}"
         group: "{{ system_group }}"
@@ -51,12 +51,12 @@
     - name: Remove local mosquitto password file
       delegate_to: localhost
       ansible.builtin.file:
-        path: .secrets/mosquitto_password_file
+        path: /tmp/mosquitto_password_file
         state: absent
 
     - name: Install Mosquitto configuration
       ansible.builtin.copy:
-        src: mosquitto/mosquitto.conf
+        src: mosquitto.conf
         dest: /data/mosquitto/mosquitto.conf
         owner: "{{ system_user }}"
         group: "{{ system_group }}"
@@ -64,7 +64,7 @@
 
     - name: Install service mosquitto
       ansible.builtin.copy:
-        src: mosquitto/etc/systemd/system/mosquitto.service
+        src: etc/systemd/system/mosquitto.service
         dest: /etc/systemd/system/mosquitto.service
         mode: "0644"
         owner: root
